--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@tanstack/react-query": "^5.62.8",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -37,6 +40,7 @@
     "@storybook/react": "^8.4.7",
     "@storybook/test": "^8.4.7",
     "@svgr/webpack": "^8.1.0",
+    "@tanstack/react-query-devtools": "^5.62.8",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
