--- a/package.json
+++ b/package.json
@@ -13,21 +13,29 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.717.0",
+    "@langchain/core": "^0.3.26",
+    "@langchain/openai": "^0.3.16",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@tanstack/react-query": "^5.62.8",
+    "@xixiyahaha/rembg-node": "^2.2.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.468.0",
     "mediasoup-client": "^3.8.1",
     "next": "^14",
     "next-auth": "^5.0.0-beta.25",
+    "openai": "^4.77.0",
     "react": "^18",
     "react-dom": "^18",
     "socket.io-client": "^4.8.1",
+    "replicate": "^1.0.1",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.2"
