--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@langchain/core": "^0.3.26",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@tanstack/react-query": "^5.62.8",
     "@uiw/react-codemirror": "^4.23.7",
     "@xixiyahaha/rembg-node": "^2.2.0",
@@ -30,6 +32,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "fabric": "^5.5.0",
     "lucide-react": "^0.468.0",
     "mediasoup-client": "^3.8.1",
     "next": "^14",
@@ -59,6 +62,7 @@
     "@storybook/test": "^8.4.7",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query-devtools": "^5.62.8",
+    "@types/fabric": "^5.3.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
