--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "openai": "^4.77.0",
     "react": "^18",
     "react-dom": "^18",
-    "socket.io-client": "^4.8.1",
     "replicate": "^1.0.1",
     "sharp": "^0.33.5",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.3",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
