--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@codemirror/lang-python": "^6.1.6",
     "@codemirror/view": "^6.36.1",
     "@langchain/core": "^0.3.26",
+    "@langchain/openai": "^0.3.16",
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.4",
