--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.717.0",
+    "@codemirror/lang-cpp": "^6.0.2",
+    "@codemirror/lang-java": "^6.0.1",
+    "@codemirror/lang-python": "^6.1.6",
+    "@codemirror/view": "^6.36.1",
     "@langchain/core": "^0.3.26",
     "@langchain/openai": "^0.3.16",
     "@radix-ui/react-avatar": "^1.1.2",
@@ -24,6 +28,7 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@tanstack/react-query": "^5.62.8",
+    "@uiw/react-codemirror": "^4.23.7",
     "@xixiyahaha/rembg-node": "^2.2.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -42,6 +47,7 @@
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.3",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
