--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.717.0",
+    "@codemirror/lang-cpp": "^6.0.2",
+    "@codemirror/lang-java": "^6.0.1",
+    "@codemirror/lang-python": "^6.1.6",
     "@langchain/core": "^0.3.26",
     "@langchain/openai": "^0.3.16",
     "@radix-ui/react-avatar": "^1.1.2",
