--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "openai": "^4.77.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "replicate": "^1.0.1",
     "sharp": "^0.33.5",
     "socket.io-client": "^4.8.1",
