--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next": "^14",
     "next-auth": "^5.0.0-beta.25",
     "openai": "^4.77.0",
+    "pako": "^2.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
@@ -61,6 +62,7 @@
     "@tanstack/react-query-devtools": "^5.62.8",
     "@types/fabric": "^5.3.9",
     "@types/node": "^20",
+    "@types/pako": "^2.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
