✨ Feat: 회원/비회원/로그아웃 상태 기능 구현

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,9 @@
     "**/*.tsx",
     "**/*.jsx",
     ".next/types/**/*.ts",
-    "next.config.mjs"
+    "next.config.mjs",
+    "src",
+    "src/types"
   ],
   "exclude": ["node_modules"]
 }
