--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-simple-typewriter": "^5.0.1",
     "sharp": "^0.33.5",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.5",
