--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,7 +38,14 @@
     ],
     "no-console": "error",
     "tailwindcss/no-custom-classname": "off",
-    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "off",
+      {
+        "vars": "all",
+        "args": "after-used",
+        "ignoreRestSiblings": false
+      }
+    ],
     "simple-import-sort/imports": [
       "error",
       {
