--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,7 @@
         }
       }
     ],
+    "jsx-a11y/media-has-caption": "off",
     "no-console": "error",
     "tailwindcss/no-custom-classname": "off",
     "@typescript-eslint/no-unused-vars": [
